--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@masewe/components": "^0.0.1",
     "@tailwindcss/vite": "^4.1.13",
     "gumoku-component": "github:farah-najib/frk-24s-J-components",
     "react": "^19.1.1",
