added .env with backend URLS. Added createPlayer function in ApiContext.

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_BASE_URL="http://localhost:3001/api/gomoku/"
+VITE_CREATE_GAME_ENDPOINT="/games/add"
+VITE_CREATE_PLAYER_ENDPOINT="/player/create"
