--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_BASE_URL="http://localhost:3001/api/gomoku/"
+VITE_API_BASE_URL="http://localhost:3001/api/gomoku"
 VITE_CREATE_GAME_ENDPOINT="/games/add"
 VITE_CREATE_PLAYER_ENDPOINT="/player/create"
-VITE_JOIN_GAME_ENDPOINT="/player/join/"
-VITE_PLAY_ENDPOINT="/player/play/"
+VITE_JOIN_GAME_ENDPOINT="/player/join"
+VITE_PLAY_ENDPOINT="/player/play"
