--- a/.github/workflows/update-dependency.yml
+++ b/.github/workflows/update-dependency.yml
@@ -4,6 +4,9 @@ on:
   repository_dispatch:
     types: [npm-package-updated]
 
+permissions:
+  contents: write
+
 jobs:
   update-dependency:
     runs-on: ubuntu-latest
@@ -11,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }} 
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
